fixed application crash on IE.
removed changed header text to be capitalize instead of uppercase

--- a/UI/Content/theme.less
+++ b/UI/Content/theme.less
@@ -544,7 +544,7 @@ footer {
   text-decoration: none;
 }
 body h1, body h2, body h3, body h4, body h5, body h6 {
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 300;
 }
 .b-database {
